--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aryadeep Varshney - AI/ML Engineer & Software Developer</title>
+    <title>Aryadeep Varshney - Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -37,7 +37,7 @@
             <div class="logo">
                 <div class="logo-badge">
                     <span class="logo-text">AV</span>
-                    <span class="logo-role">Software Engineer</span>
+                    <span class="logo-role">Aspiring Software Engineer</span>
                 </div>
             </div>
             <ul class="nav-menu">
