--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
             <div class="about-content">
                 <div class="about-text" data-aos="fade-right">
                     <h3>Aspiring Software Engineer & AI Enthusiast</h3>
-                    <p>I'm currently pursuing my B.Tech in Computer Science at PSIT Kanpur, where I've maintained a CGPA of 7.5 while diving deep into the fascinating world of AI and machine learning. My journey began with a simple curiosity about how machines can learn, and now I'm working as an AI Model Trainer at Outlier.ai, where I help improve AI systems that impact millions of users.</p>
+                    <p>I’m a final-year B.Tech student in Computer Science at PSIT Kanpur, currently maintaining a CGPA of 7.5. My journey in technology began with a simple curiosity about how machines can “think,” which gradually evolved into a deep interest in artificial intelligence and machine learning. Over time, I’ve explored this field through projects such as a disease prediction system aimed at assisting early diagnosis and tools that simplify complex information for easier understanding. These experiences have not only strengthened my technical foundation but also fueled my belief in using technology to solve real-world problems.</p>
 
-                    <p>What drives me is the potential to create technology that genuinely helps people. Whether it's developing a disease prediction system that could save lives or building tools that make complex information more accessible, I believe in the power of code to make a positive difference.</p>
-
-                    <p>Beyond academics, I've solved over 500 problems on competitive programming platforms, achieved a 5★ rating on HackerRank, and led technical initiatives as Tech Co-Head at Ignitia 2025. I'm always eager to learn, collaborate, and tackle new challenges.</p>
+                    <p>In parallel with academics, I’ve built strong problem-solving skills by practicing competitive programming, solving 500+ problems across platforms like LeetCode and HackerRank, where I’ve also earned a 5★ rating. These challenges have sharpened my logical thinking and coding efficiency.</p>
+                    <p>Beyond technical skills, I enjoy contributing to communities and working in teams. As a Tech Co-Head at Ignitia 2025(Annual Tech Fest-PSIT Kanpur), I helped organize and lead technical initiatives, which gave me the opportunity to collaborate with peers, manage responsibilities, and bring innovative ideas to life.</p>
+                    <p>What excites me most is the constant opportunity to learn, experiment, and push boundaries—whether it’s through exploring new algorithms, building impactful applications, or working with like-minded people to create technology that genuinely helps others.</p>
 
                     <div class="about-info">
                         <div class="info-item">
