--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <span>Explore My Work</span>
                         <i class="fas fa-arrow-right"></i>
                     </a>
-                    <a href="Resume/AryadeepFinalResume.pdf" download class="btn btn-secondary">
+                    <a href="Resume/main.pdf" download class="btn btn-secondary">
                         <span>Download Resume</span>
                         <i class="fas fa-download"></i>
                     </a>
